--- a/manifest.json
+++ b/manifest.json
@@ -349,7 +349,7 @@
                     "title":"timeScaleStretch"
                 }
             ],
-            "path":"adobe/xmp-docs/master/XMPNamespaces/XMPDataTypes/XMPDataTypes.md",
+            "path":"",
             "title":"XMP DataTypes"
         }
     ]
