--- a/manifest.json
+++ b/manifest.json
@@ -349,7 +349,7 @@
                     "title":"timeScaleStretch"
                 }
             ],
-            "path":"",
+            "path":"#",
             "title":"XMP DataTypes"
         }
     ]
