Changing title from CFAPattern namespace to CFAPattern

--- a/manifest.json
+++ b/manifest.json
@@ -154,7 +154,7 @@
 
                     ],
                     "path":"adobe/xmp-docs/master/XMPNamespaces/XMPDataTypes/CFAPattern.md",
-                    "title":"CFAPattern namespace"
+                    "title":"CFAPattern"
                 },
                 {  
                     "importedFileName":"Colorant",
